# openscm-twolayermodel

./: .bandit.yml  .copier-answers.yml  .coveragerc  .gitattributes  .gitignore  .pylintrc  CHANGELOG.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  TODO.md  paper.bib  paper.md  pyproject.toml  setup.cfg  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  default.md
.github/actions/setup/: action.yml
.github/workflows/: bump.yaml  ci-cd-workflow.yml  ci.yaml  install.yaml  release.yaml  test-conda-install.yml  test-pypi-install.yml
changelog/: README.md
docs/source/: base.rst  conf.py  constants.rst  development.md  development.rst  errors.rst  impulse_response_model.rst  index.md  index.rst  installation.rst  notebooks.md  two_layer_model.rst  usage.rst  utils.rst
docs/source/api/: openscm_twolayermodel.base.rst  openscm_twolayermodel.constants.rst  openscm_twolayermodel.errors.rst  openscm_twolayermodel.impulse_response_model.rst  openscm_twolayermodel.rst  openscm_twolayermodel.testing.rst  openscm_twolayermodel.two_layer_model.rst  openscm_twolayermodel.utils.rst
docs/source/notebooks/: basic-demo.py
docs/source/usage/: impulse-response-equivalence.ipynb  one-layer-model.ipynb  running-scenarios.ipynb
notebooks/: getting-started.ipynb  impulse-response-equivalence.ipynb  one-layer-model.ipynb  running-scenarios.ipynb
scripts/: check_requirements_in_readme.py  test-install.py  test_install.py
src/openscm_twolayermodel/: __init__.py  _version.py  base.py  constants.py  errors.py  impulse_response_model.py  testing.py  two_layer_model.py  utils.py
tests/: conftest.py  notebook-tests.cfg
tests/integration/: test_impulse_response_integration.py  test_model_integration_base.py  test_twolayer_impulse_response_equivalence.py  test_twolayer_integration.py
tests/regression/: test_impulse_response_defaults.py  test_twolayer_defaults.py  test_twolayer_output.py
tests/test-data/impulse-response-output/: test_impulse_response_defaults.csv
tests/test-data/two-layer-output/: test_impulse_response_defaults.csv  test_twolayer_defaults.csv  test_twolayer_plus_efficacy.csv  test_twolayer_plus_state_dependence.csv
tests/unit/: test_impulse_response_unit.py  test_misc.py  test_model_base.py  test_two_layer_model_unit.py  test_utils.py
